# libtorch-cmake-template

./: .gitignore  Makefile  README.md  generate_tensorboard_data.py
.github/workflows/: build.yml  test.yml
src/: .clang-format  .clangd  CMakeLists.txt  main.cpp  raw_data_writer.cpp  raw_data_writer.hpp  readme.md
src/BinaryClassificationJIT/: data-preprocessing.py  dataloader.cpp  dataloader.py  hyperparameters.hpp  model.py  train.py
src/ImageReader/: constructor.cpp  image_reader.hpp  test.py  to_tensor.cpp
src/MultiClassClassification/: hyperparameters.hpp  model.cpp  model.hpp  train.cpp
src/MultiClassClassificationJIT/: hyperparameters.hpp  train.cpp
src/PytorchJIT/: load-example.cpp
src/XOR/: model.cpp  model.hpp  show_params.cpp  show_params.py  train.cpp
src/raw_data_writer/: add_scalar.cpp  add_scalars.cpp  constructor.cpp  raw_data_writer.hpp
